--- a/project/core/templates/core/User.html
+++ b/project/core/templates/core/User.html
@@ -57,14 +57,14 @@
 
         </div>
         <div class="rightsec">
-          <a href="{% url 'profile' %}"><i class="fa-solid fa-user fa-2x"></i></a>
-          <a href="{% url 'index' %}"><i class="fa-solid fa-house fa-2x"></i></a>
-           
-          <a href="#footer"><i class="fa-solid fa-address-card fa-2x"></i></a>
-          <a href="#footer"><i class="fa-solid fa-phone fa-2x"></i></a>
-          {% if user.is_authenticated %}
-            <a href="{% url 'logout' %}"><i class="fa-solid fa-right-from-bracket"></i></a>
-          {% endif %}
+                    <a href="{% url 'profile' %}"><i class="fa-solid fa-user fa-2x" id="user"></i></a>
+                    <a href="{% url 'index' %}"><i class="fa-solid fa-house fa-2x" id="home"></i></a>
+                    
+                    <a href="#footer"><i class="fa-solid fa-address-card fa-2x" id="aboutus"></i></a>
+                    <a href="#footer"><i class="fa-solid fa-phone fa-2x" id="contactus"></i></a>
+                    {% if user.is_authenticated %}
+                       <a href="{% url 'logout' %}"><i class="fa-solid fa-right-from-bracket" id="logout"></i></a>
+                    {% endif %}
           
 
           
