--- a/project/items/templates/item/Products.html
+++ b/project/items/templates/item/Products.html
@@ -49,15 +49,15 @@
         <div class="middlesec">
         </div>
         <div class="rightsec">
-                    <a href="{% url 'profile' %}"><i class="fa-solid fa-user fa-2x"></i></a>
-                    <a href="{% url 'index' %}"><i class="fa-solid fa-house fa-2x"></i></a>
+                    <a href="{% url 'profile' %}"><i class="fa-solid fa-user fa-2x" id="user"></i></a>
+                    <a href="{% url 'index' %}"><i class="fa-solid fa-house fa-2x" id="home"></i></a>
                      
-                    <a href="#footer"><i class="fa-solid fa-address-card fa-2x"></i></a>
-                    <a href="#footer"><i class="fa-solid fa-phone fa-2x"></i></a>
-                    <i class="fa-solid fa-cart-shopping fa-2x "></i>
+                    <a href="#footer"><i class="fa-solid fa-address-card fa-2x" id="aboutus"></i></a>
+                    <a href="#footer"><i class="fa-solid fa-phone fa-2x" id="contactus"></i></a>
+                    <i class="fa-solid fa-cart-shopping fa-2x " id="cart"></i>
                     
                     {% if user.is_authenticated %}
-                      <a href="{% url 'logout' %}"><i class="fa-solid fa-right-from-bracket"></i></a>
+                      <a href="{% url 'logout' %}"><i class="fa-solid fa-right-from-bracket" id="logout"></i></a>
                     {% endif %}
 
                      <div class="cart-box hide">
@@ -65,22 +65,23 @@
                      
                       <div class="cart-window ">
                         <h2>Your Cart</h2>
-                        <div class="cart-wrapper">
-
-
-                        </div>
-                        <div class="subtotal">Subtotal= 0.00 EGP</div>
-                        <div class="cart-buttons">
-                        <a href="payment/payment gateway/index.html"><button class="checkout">Proceed To Checkout</button></a>
-                          
+                        <form method="POST" action="{% url 'save_order' %}">
+                          {% csrf_token %}
+                          <div class="cart-wrapper">
+                          </div>
+                          <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
+                          {% for item in items %}
+                              <input type="hidden" name="item_names[]" value="{{ item.name }}">
+                          {% endfor %}
+                          <button class="checkout" id="save-order-btn">Save the order for Pick up</button>
+                      </form>
                         </div>
                         
                       </div>
 
                      </div>
         </div>
-    </div>
-    
+   
     <div class="product-page-name">
       <h1 class="page-name-text">{{ category_name }}</h1>
     </div>
