--- a/project/static/css/User.css
+++ b/project/static/css/User.css
@@ -192,23 +192,44 @@ font-weight: 500;
 margin-top: 3px;
   height: 65px;
 }
-.rightsec{
+.rightsec {
   display: grid;
-  grid-template-columns: 100px 100px 100px 100px 100px;
-  padding-left: 70px;
- 
-
+  grid-template-columns: repeat(auto-fit, minmax(60px, 1fr));
+  grid-gap: 10px;
   width: 500px;
   color: black;
- 
   font-weight: 600;
 }
-.fa-solid{
+
+.fa-solid {
   color: black;
   transition: 0.5s;
+  width: 100%;
+  height: 100%;
 }
-.fa-solid:hover{
+
+.fa-solid:hover {
   color: rgb(152, 145, 145);
+}
+
+#user {
+  grid-column: 1;
+}
+
+#home {
+  grid-column: 2;
+}
+
+#aboutus {
+  grid-column: 3;
+}
+
+#contactus {
+  grid-column: 4;
+}
+#logout {
+  grid-column: 6;
+  font-size: xx-large;
 }
 .container{
  
