location and qunatity

--- a/project/items/templates/item/ordersaved.html
+++ b/project/items/templates/item/ordersaved.html
@@ -17,7 +17,7 @@
         <b style="color: #881616;">OUR LOCATION</b>
         
         <div id="map">
-            <iframe src="https://www.google.com/maps/place/30%C2%B003'06.1%22N+31%C2%B015'23.1%22E/@30.0517,31.25641,17z/data=!4m4!3m3!8m2!3d30.0517!4d31.25641?hl=en" width="600" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d410.20352594444034!2d31.25651574239918!3d30.051969590244987!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14584116e5103b01%3A0x6908946a04d7fb47!2z2YXYudin2YXZhCDYp9mE2YHYpyBBbGZhIExhYnM!5e0!3m2!1sen!2seg!4v1684105106862!5m2!1sen!2seg" width="600" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
 
         <div>
