--- a/project/core/templates/core/Signup.html
+++ b/project/core/templates/core/Signup.html
@@ -53,6 +53,13 @@
            
 </div>
     </div>
+
+    {% if message %}
+    <script>
+        alert('{{ message }}');
+    </script>
+    {% endif %}
+
     <div class="registration-box">
 
         <h1>Registration</h1>
